--- a/backend/package.json
+++ b/backend/package.json
@@ -14,11 +14,18 @@
   "license": "ISC",
   "dependencies": {
     "axios": "^1.7.9",
+    "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
     "cloudinary": "^2.5.1",
+    "cookie": "^1.0.2",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "csv-parser": "^3.1.0",
+    "dotenv": "^17.2.1",
     "express": "^4.21.2",
+    "express-async-handler": "^1.2.0",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
     "puppeteer": "^24.3.1",
     "socket.io": "^4.8.1",
