--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@sparticuz/chromium": "^138.0.2",
     "axios": "^1.7.9",
     "bcryptjs": "^3.0.2",
     "cheerio": "^1.0.0",
@@ -27,7 +28,7 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.17.1",
     "multer": "^1.4.5-lts.1",
-    "puppeteer": "^24.3.1",
+    "puppeteer": "^24.16.0",
     "socket.io": "^4.8.1",
     "uuid": "^11.0.5",
     "xlsx": "^0.18.5"
