--- a/live-collabs/package.json
+++ b/live-collabs/package.json
@@ -17,7 +17,8 @@
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.8.0",
     "socket.io-client": "^4.8.1",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "vite": "^6.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
@@ -28,7 +29,6 @@
     "eslint-plugin-react": "^7.37.2",
     "eslint-plugin-react-hooks": "^5.0.0",
     "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.14.0",
-    "vite": "^6.0.5"
+    "globals": "^15.14.0"
   }
 }
